language select option added. need to apply it to the web address

--- a/main_page/new_style.css
+++ b/main_page/new_style.css
@@ -7,17 +7,18 @@ body {
 	height: 100vh;
 	margin: 0;
 	background-color: whitesmoke;
+	min-width: 600px;
 }
 
-#title-text {
+.title-text {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	margin-top: 0;
 	margin-bottom: 2vw;
 	letter-spacing: 4px;
-	font-size: clamp(48px, 5vw, 100px); /* 최소 16px, 기본 화면 너비의 5%, 최대 48px */
-    /* font-size: 5vw; 화면 너비의 5%에 해당하는 크기로 조정 */
+	font-size: clamp(48px, 5vw, 80px); /* 최소 16px, 기본 화면 너비의 5%, 최대 48px */
+	font-weight: 500;
 }
 
 .button-container {
@@ -34,11 +35,13 @@ body {
 	align-items: center;
 	min-height: 500px;
 	padding: 20px 20px;
-	margin: 0 3vw;
+	margin: 1vw 3vw;
 	border: none;
 	border-radius: 24px;
 	cursor: pointer;
 	transition: color 0.4s ease;
+	min-width: 250px;
+	min-height: 250px;
 }
 
 .text {
@@ -48,8 +51,6 @@ body {
 
 .button img, .button2 img {
 	width: 100%;
-	min-width: 100px;
-	min-height: 100px;
 	max-width: 512px;
 	max-height: 512px;
 	margin-bottom: 10px;
