--- a/main_page/new_style.css
+++ b/main_page/new_style.css
@@ -29,6 +29,7 @@ body {
 }
 
 .button, .button2 {
+	flex: 1;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
@@ -77,12 +78,7 @@ body {
 	color: #000;
 }
 
-/* New Content Style */
-#new-content {
-	text-align: center;
-}
-
-#back-button {
+.back-button {
 	background-color: #5cef99;
 	color: white;
 	border: none;
@@ -94,9 +90,14 @@ body {
 	transition: color 0.4s ease;
 }
 
-#back-button:hover {
+.back-button:hover {
 	background-color: #abf4c9;
 	color: #000;
+}
+
+/* New Content Style */
+#new-content {
+	text-align: center;
 }
 
 #globe-icon {
