--- a/main_page/css/select-style.css
+++ b/main_page/css/select-style.css
@@ -1,10 +1,10 @@
 body {
 	font-family: "Jaro", sans-serif;
 	display: flex;
-	flex-direction: column;
 	align-items: center;
+	flex-direction: column;
 	justify-content: center;
-	height: 100vh;
+	height: 100%;
 	margin: 0;
 	background-color: whitesmoke;
 	min-width: 600px;
