--- a/main_page/css/select-style.css
+++ b/main_page/css/select-style.css
@@ -1,7 +1,6 @@
 body {
 	font-family: "Jaro", sans-serif;
 	display: flex;
-	align-items: center;
 	flex-direction: column;
 	justify-content: center;
 	height: 100%;
@@ -29,6 +28,7 @@ body {
 }
 
 .button, .button2 {
+	max-width: 600px;
 	flex: 1;
 	display: flex;
 	flex-direction: column;
